force-app/main/default/objects/GCP_Notification__c/GCP_Notification__c.object-meta.xml
<CustomObject>
    <label>GCP Notification</label>
    <nameField>
        <displayFormat>GCPN-{00000000}</displayFormat>
        <label>GCP Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>