force-app/main/default/objects/GCP_Notification__c/fields/Optimove_Event_Payload__c.field-meta.xml
<CustomField>
    <fullName>Optimove_Event_Payload__c</fullName>
    <label>Optimove Event Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>