force-app/main/default/objects/GCP_Notification__c/fields/Optimove_Event_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Optimove_Event_Type_Id__c</fullName>
    <label>Optimove Event Type Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>